# py-gitguardian

./: .env.example  .gitguardian.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
changelog.d/: 20230327_152427_aurelien.gateau_setup_scriv.md  20230403_154257_alina.tuholukova_include_incident_url.md  20230425_100744_antonin.lacombe_implement_honeytoken_creation.md  20230505_162227_antonin.lacombe_update_honeytoken_id_type.md  20230523_130204_aurelien.gateau_read_metadata.md  20230529_153802_aurelien.gateau_log.md  20230613_163511_paul.petit.ext_jwt_creation.md  20230622_100420_sylvain.baud.ext_fix_request_data_field.md  20230703_154225_sylvain.baud.ext_iac_diff_scan.md  20230712_172917_aurelien.gateau_fix_maximum_size_check.md  20231221_170806_aurelien.gateau_report_rate_limit.md  20231229_172424_james.sinclair_add_incidents.md  20240110_095013_fnareoh_scrt_3925_fix_ggshield_creating_too_large_payloads.md  20240124_104631_cedric.bosselut.md  20240126_102031_corentin.garcia_remove_3_7.md  20240514_143905_aurelien.gateau_improve_error_handling.md  20240624_103236_aurelien.gateau_fix_release_job.md  20240701_180056_fnareoh_scrt_4626_ggshield_display_custom_remediation_message_in_ggshield_if.md  20240823_170420_fnareoh_scrt_4759_optimize_files_to_scan_on_merge_commits.md  20241014_101918_mathias.millet_handle_excluded_policy_breaks.md  20241107_113401_pierrelalanne_fix_typing_issue_on_severity.md  20241113_094144_samuel.guillaume_spi_526_add_fields_is_diff_and_diff_kind.md  20241120_112255_salome.voltz_add_api_tokens_endpoint_method.md  20241206_145636_yanne.bensafia_members_teams_endpoints.md  20250205_113323_florian.perucki_remove_sca_iac.md  20250416_142945_salome.voltz_scrt_5438_ggshield_for_each_detected_secret_add_a_link_towards_our.md  20250425_135326_salome.voltz.md  20250507_141851_achille.mascia_rename_serializer_field.md  20250604_143935_alina.tuholukova_add_source_id_parameter_for_multiscan.md  20250619_165702_jonathan.griffe_fix_gim_backwards_compatibility.md  20250702_102756_achille.mascia_nhi_ggshield_v2.md  20250826_134646_aurelien.gateau.md  20250930_174242_henri.hubert_GG_HH_patch_1.md  20251114_083056_clement.tourriere_add_missing_secret_write_scope.md  20251114_110537_kp2681_scrt_6053_enforce_ignore_reason_for_invalid_state_to_test_credential.md  20251114_113150_kp2681_scrt_6052_bug_marshmallow_validationerror_on_tags_during_ggshield.md  (+12 more)
(+91 files in other folders)
