[flake8]
ignore = E203,W503
inline-quotes = double
max-line-length = 120

[isort]
line_length=88
lines_after_imports=2
multi_line_output=3
known_third_party=marshmallow,requests,setuptools,vcr_unittest
include_trailing_comma=true

[metadata]
description-file = README.md

[nosetests]
verbosity=2
with-doctest=1
